# zkemail.rs

./: CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_REPORT.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: circuits.rs  crypto.rs  email.rs  io.rs  lib.rs  regex.rs  structs.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: dns_resolver.rs  email_parser.rs  lib.rs  utils.rs
helpers/: Cargo.toml  README.md
helpers/src/: dkim.rs  email.rs  file.rs  generator.rs  input_generators.rs  io.rs  lib.rs  regex.rs  structs.rs
profiling/: Cargo.toml  README.md
profiling/benches/: comprehensive_benchmarks.rs  email_benchmarks.rs  regex_benchmarks.rs
profiling/src/: cpu_profiler.rs  lib.rs  memory_profiler.rs
profiling/tests/: dkim_tests.rs  email_parsing_tests.rs  functionality_tests.rs  regex_tests.rs  zkvm_compatibility_tests.rs
profiling/tests/data/: dkim_public_key.pem  dkim_test_email.eml  sample_email.eml
