[workspace]
members = [ "core", "helpers" ]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8.19"
anyhow = "1.0"
base64 = "0.22.1"
borsh = { version = "1.5.3", features = ["derive"] }
chrono = "0.4.39"
cfdkim = { git = "https://github.com/risc0-labs/dkim", default-features = false }
log = "0.4.22"
mailparse = "0.14.0"
regex-automata = "0.4.8"
reqwest = "0.12.12"
rsa = "=0.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slog = "2.7.0"
tokio = "1.44.0"
trust-dns-resolver = "0.23.2"

zkemail-core = { path = "core" }
zkemail-helpers = { path = "helpers" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3       
debug = false      
lto = true        
codegen-units = 1  
panic = "abort" 