[package]
name = "zkemail-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cfdkim = { workspace = true, features = ["dns"] } 
log = { workspace = true }
mailparse = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
regex-automata = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trust-dns-resolver = { workspace = true }
zkemail-core = { workspace = true }