[package]
name = "zkemail_core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
num-bigint = "0.4.4"
regex = "1.10.4"
regex-automata = "0.4.8"
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.10.0-pre.2" }
serde = "1.0.200"
sha2 = "0.10.8"
mail-parser = "0.9"
anyhow = "1.0"