[package]
name = "zkemail_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
mail-parser = "0.9.4"
rsa = "0.9.6"
sha2 = "0.10.8"
cfdkim = { git = "https://github.com/zkemail/cfdkim.git" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
